# api/pharmacy-pl.openapi.yaml
@@ -16,6 +16,8 @@ tags:
     description: Pharmacy Prescription API
   - name: ambulances
     description: Ambulance details
+  - name: medicineOrders
+    description: Medicine order details
 paths:
   "/ambulances":
     post:
@@ -77,6 +79,7 @@ paths:
           description: Ambulance deleted successfully.
         "404":
           description: Ambulance with the provided ID does not exist.
+
   "/ambulances/{ambulanceId}/prescriptions":
     get:
       tags:
@@ -102,6 +105,7 @@ paths:
                   $ref: "#/components/schemas/Prescription"
         "404":
           description: Ambulance with such ID does not exist
+
     post:
       tags:
         - prescriptions
@@ -223,6 +227,152 @@ paths:
         "404":
           description: Prescription or ambulance with the provided ID does not exist.
 
+  "/ambulances/{ambulanceId}/medicineOrders":
+    post:
+      tags:
+        - medicineOrders
+      summary: Creates a new medicine order
+      operationId: createMedicineOrder
+      description: Use this endpoint to create a new medicine order associated with an ambulance.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: The ID of the ambulance where the medicine order was issued.
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: The medicine order data to create.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MedicineOrder'
+      responses:
+        "201":
+          description: Medicine order created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MedicineOrder'
+        "400":
+          description: Invalid input provided.
+        "404":
+          description: Ambulance with the provided ID does not exist.
+
+    get:
+      tags:
+        - medicineOrders
+      summary: Retrieves all medicine orders for an ambulance
+      operationId: getAllMedicineOrders
+      description: Use this endpoint to retrieve a list of all medicine orders associated with an ambulance.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: The ID of the ambulance to retrieve medicine orders for.
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: A list of medicine orders was retrieved successfully.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MedicineOrder'
+        "404":
+          description: Ambulance with the provided ID does not exist.
+
+  "/ambulances/{ambulanceId}/medicineOrders/{orderId}":
+    get:
+      tags:
+        - medicineOrders
+      summary: Retrieves a specific medicine order by ID
+      operationId: getMedicineOrderById
+      description: Use this endpoint to retrieve details of a specific medicine order by its ID and ambulanceId.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: The ID of the ambulance associated with the medicine order.
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: orderId
+          description: The ID of the medicine order to retrieve.
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Medicine order retrieved successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MedicineOrder'
+        "404":
+          description: Medicine order or ambulance with the provided ID does not exist.
+
+    put:
+      tags:
+        - medicineOrders
+      summary: Updates a specific medicine order
+      operationId: updateMedicineOrder
+      description: Use this endpoint to update details of a specific medicine order.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: The ID of the ambulance associated with the medicine order.
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: orderId
+          description: The ID of the medicine order to update.
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/MedicineOrder"
+        description: The updated medicine order details.
+        required: true
+      responses:
+        "200":
+          description: Medicine order updated successfully.
+        "400":
+          description: Invalid input provided.
+        "404":
+          description: Medicine order or ambulance with the provided ID does not exist.
+
+    delete:
+      tags:
+        - medicineOrders
+      summary: Deletes a specific medicine order
+      operationId: deleteMedicineOrder
+      description: Use this endpoint to delete a specific medicine order by its ID.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: The ID of the ambulance associated with the medicine order to delete.
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: orderId
+          description: The ID of the medicine order to delete.
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: Medicine order deleted successfully.
+        "404":
+          description: Medicine order or ambulance with the provided ID does not exist.
 
 components:
   schemas:
@@ -280,37 +430,47 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Prescription'
+        medicineOrderList:
+          type: array
+          items:
+            $ref: '#/components/schemas/MedicineOrder'
       example: 
         $ref: '#components/examples/AmbulanceExample'
+
     Medicine:
       type: object
-      required: [medicineId, name, dosage, quantityPrescribed, quantityDispensed, dispenseDate]
+      required: [name]
       properties:
-        medicineId:
-          type: string
-          example: MED3001
         name:
           type: string
           example: Amoxicillin
-        dosage:
+
+    MedicineOrder:
+      type: object
+      required: [orderId, orderDate, orderedBy, medicines]
+      properties:
+        orderId:
           type: string
-          example: 500mg
-        quantityPrescribed:
-          type: integer
-          example: 30
-        quantityDispensed:
-          type: integer
-          example: 30
-        dispenseDate:
+          example: ORD123456789
+        orderDate:
           type: string
-          format: date
-          example: "2024-04-02"
+          format: date-time
+          example: "2024-05-18T12:00:00Z"
+        orderedBy:
+          type: string
+          example: "Dr. House"
         notes:
           type: string
-          example: Take 2 times a day with food to avoid stomach upset.
-        unit:
-          type: string
-          example: tablets
+        medicines:
+          type: array
+          items:
+            $ref: '#/components/schemas/Medicine'
+      example:
+        orderId: ORD123456789
+        orderDate: "2024-05-18T12:00:00Z"
+        medicines:
+          - name: Amoxicillin
+
   examples:
     AmbulanceExample:
       summary: Sample GP ambulance
@@ -326,14 +486,7 @@ components:
             issuedDate: "2024-04-01"
             validUntil: "2024-06-01"
             medicines:
-              - medicineId: MED3001
-                name: Amoxicillin
-                dosage: "500mg"
-                quantityPrescribed: 30
-                quantityDispensed: 15
-                dispenseDate: "2038-12-24T10:35:00Z"
-                notes: "Take 2 times a day with food to avoid stomach upset."
-                unit: tablets
+              - name: Amoxicillin
             status: "partially dispensed"
             instructions: "Take one tablet three times a day after meals."
             ambulanceId: "gp-house"
@@ -344,15 +497,13 @@ components:
             issuedDate: "2038-12-24T10:35:00Z"
             validUntil: "2038-12-24T10:35:00Z"
             medicines:
-              - medicineId: MED4002
-                name: Ibuprofen
-                dosage: "200mg"
-                quantityPrescribed: 50
-                quantityDispensed: 50
-                dispenseDate: "2038-12-24T10:35:00Z"
-                notes: "Take with food. Do not exceed 6 tablets per day."
-                unit: tablets
+              - name: Ibuprofen
             status: "dispensed"
             instructions: "Take two tablets twice a day."
             ambulanceId: "gp-house"
             notes: "Check blood pressure regularly while on medication."
+        medicineOrderList:
+          - orderId: ORD123456789
+            orderDate: "2024-05-18T12:00:00Z"
+            medicines:
+              - name: Amoxicillin
