# internal/pharmacy_pl/model_medicine_order.go
@@ -1,0 +1,28 @@
+/*
+ * Pharmacy Prescription API
+ *
+ * Pharmacy Prescription management system
+ *
+ * API version: 1.0.0
+ * Contact: xkabac@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package pharmacy_pl
+
+import (
+	"time"
+)
+
+type MedicineOrder struct {
+
+	OrderId string `json:"orderId"`
+
+	OrderDate time.Time `json:"orderDate"`
+
+	OrderedBy string `json:"orderedBy"`
+
+	Notes string `json:"notes,omitempty"`
+
+	Medicines []Medicine `json:"medicines"`
+}
